--- a/ProjetoJavaWeb1/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetoJavaWeb1/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/j2ee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/j2ee http://xmlns.jcp.org/xml/ns/j2ee/web-app_3_1.xsd http://java.sun.com/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/j2ee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/j2ee http://xmlns.jcp.org/xml/ns/j2ee/web-app_3_1.xsd" id="WebApp_ID" version="3.0">
   <display-name>Teste</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -17,6 +17,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>UsuarioController</servlet-name>
-    <url-pattern>/usucontroller.do</url-pattern>
+    <url-pattern>/UsuarioController.do</url-pattern>
   </servlet-mapping>
 </web-app>
