--- a/ProjetoJavaWeb1/.classpath
+++ b/ProjetoJavaWeb1/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/adson/OneDrive/Documentos/Desenvolvimento/Instaladores/servlet-api.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/postgresql-42.2.22.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
