Iniciado o front end e implementação do JSP no projeto

--- a/ProjetoJavaWeb1/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetoJavaWeb1/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/j2ee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/j2ee http://xmlns.jcp.org/xml/ns/j2ee/web-app_3_1.xsd" id="WebApp_ID" version="3.0">
   <display-name>Teste</display-name>
   <welcome-file-list>
+    <welcome-file>login.html</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
