--- a/ProjetoJavaWeb1/src/main/webapp/WEB-INF/web.xml
+++ b/ProjetoJavaWeb1/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,25 @@
     <servlet-name>UsuarioController</servlet-name>
     <url-pattern>/UsuarioController.do</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AutenticadorController</display-name>
+    <servlet-name>AutenticadorController</servlet-name>
+    <servlet-class>br.com.javaweb.controller.AutenticadorController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AutenticadorController</servlet-name>
+    <url-pattern>/AutenticadorController.do</url-pattern>
+  </servlet-mapping>
+  <filter>
+    <display-name>FiltroAutenticacao</display-name>
+    <filter-name>FiltroAutenticacao</filter-name>
+    <filter-class>br.com.javaweb.controller.FiltroAutenticacao</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>FiltroAutenticacao</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+  </filter-mapping>
 </web-app>
